--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         .celle {
             width: 100px;
             height: 100px;
-            border: 1px solid red;
+            border: 1px solid white;
             display: flex;
             justify-content: center;
             align-items: center;
